--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,5 +5,7 @@ body {
   text-align: center; }
 
 canvas {
+  display: block;
+  margin: auto;
   border: 2px solid lightgrey;
   border-radius: 5px; }
